# uri-soft

./: Doxyfile  README.md
firmware/: px_uploader.py
howto/: flash_pixhawk_controller.txt  flash_pixhawk_controller.txt~
uri_base/: CMakeLists.txt  package.xml  uri_base_plugin.xml
uri_base/include/uri_base/: angle_conversion.hpp  keyboard.hpp  shared_memory.hpp  trajectory.hpp
uri_base/src/: angle_conversion.cpp  keyboard.cpp  shared_memory.cpp  trajectory.cpp
uri_bridge/: CMakeLists.txt  package.xml  task_plugins.xml
uri_bridge/configfiles/: collect_3dscan_iris.xml  example.xml  keyboard_command_kynematic_iris.xml  srt_exploration_iris.xml
uri_bridge/include/uri_bridge/: SRT.hpp  SRTNode.hpp  bridge_map.hpp
uri_bridge/include/uri_bridge/behavior_controllers/: example_behavior_controller.hpp  srtexploration.hpp
uri_bridge/include/uri_bridge/resources/: shared_memory.hpp
uri_bridge/include/uri_bridge/tasks/: collect3dscan.hpp  process3dscan.hpp
uri_bridge/launch/: example.launch  keyboard_command_bridge_iris_with_gz.launch  srt_exploration_iris_with_gz.launch
uri_bridge/src/: SRT.cpp  SRTNode.cpp  bridge_map.cpp
uri_bridge/src/behavior_controllers/: example_behavior_controller.cpp  srtexploration.cpp
uri_bridge/src/tasks/: collect3dscan.cpp  process3dscan.cpp
uri_bridge/src/test/: test_SRTNode.cpp  test_grid_map.cpp
uri_core/: CMakeLists.txt  package.xml  task_plugins.xml
uri_core/configfiles/: example.xml
uri_core/src/: behavior.cpp  element.cpp  (+6 more)
uri_example/: CMakeLists.txt  example_CMakeLists.txt  package.xml  task_plugins.xml
uri_gazebo/: CMakeLists.txt  package.xml  uri_gazebo_plugins.xml
uri_gazebo/Media/materials/scripts/: uri_materials.material
uri_gazebo/include/uri_gazebo/behavior_controllers/: commandposebc.hpp
uri_gazebo/include/uri_gazebo/tasks/: directposecommandgz.hpp
uri_gazebo/launch/: beach.launch  bridge.launch  nogazebo.launch  shore.launch
uri_gazebo/launch/gazebo_interface/: no.launch  yes.launch
uri_gazebo/meshes/: bridge_01.dae  iris.dae  iris_collision.dae
uri_gazebo/meshes/bridges/: bridge_01.dae
uri_gazebo/src/: sitl_gazebo_interface.cpp
uri_gazebo/src/behavior_controllers/: commandposebc.cpp
uri_gazebo/src/tasks/: directposecommandgz.cpp
uri_gazebo/urdf/: firefly_13.gazebo.xacro  firefly_base.urdf.xacro  generic_camera.urdf.xacro  generic_laser.urdf.xacro  iris.urdf.xacro  iris_2_cameras.urdf.xacro  iris_base.urdf.xacro  iris_laser_bridge_mapping.urdf.xacro  iris_laser_shore_following.urdf.xacro  sonar_sensor.urdf.xacro  sujitfly.urdf.xacro
uri_gazebo/worlds/: asphalt.world  asphalt_boxes.world  asphalt_obstacles.world  beach.world  bridge.world  powerplant.world  qc13.world  shore.world
uri_scripts/: CMakeLists.txt  package.xml
uri_sensors/: CMakeLists.txt  package.xml  uri_sensors_plugins.xml
uri_sensors/include/uri_sensors/resources/: laserscanner.hpp  laserscannergazebo.hpp  mvbluefox.hpp  videostream.hpp
uri_sensors/src/: laserscannergazebo_node.cpp
uri_sensors/src/resources/: laserscanner.cpp  laserscannergazebo.cpp  mvbluefox.cpp  videostream.cpp
uri_shorefollowing/: CMakeLists.txt  package.xml  uri_shorefollowing_plugin.xml
uri_shorefollowing/configfiles/: shoredetection_p.xml  shorefollowing.xml  shorefollowing_p.xml  shorefollowing_p_2.xml  shorefollowing_p_test.xml
uri_shorefollowing/include/uri_shorefollowing/behavior_controllers/: circlingexperiment.hpp  offlineintensitymodeltest.hpp  shoredetectionexperiment.hpp  shorefollowingexperiment.hpp  shorefollowingexperiment_2.hpp
uri_shorefollowing/include/uri_shorefollowing/tasks/: circling.hpp  fixedspeeddesiredheadingcontroller.hpp  intensitymodelcreator.hpp  shorefollowing.hpp  shorefollowing_new.hpp  shorefollowingpaolo.hpp
uri_shorefollowing/launch/: lidar.launch  offlineShoredetection.launch  shore.launch  shoredetection_p_iris.launch  shorefollowing_gz.launch  shorefollowing_p_gz.launch  shorefollowing_p_gz_2.launch  shorefollowing_p_iris.launch  shorefollowing_p_iris_2.launch  shorefollowing_p_iris_from_bag.launch
uri_shorefollowing/src/behavior_controllers/: circlingexperiment.cpp  offlineintensitymodeltest.cpp  shoredetectionexperiment.cpp  shorefollowingexperiment.cpp  shorefollowingexperiment_2.cpp
uri_shorefollowing/src/tasks/: circling.cpp  fixedspeeddesiredheadingcontroller.cpp  intensitymodelcreator.cpp  shorefollowing.cpp  shorefollowing_new.cpp  shorefollowingpaolo.cpp
uri_shorefollowing/urdf/: iris_laser_shore_following.urdf.xacro
uri_shorefollowing/worlds/: shore.world
uri_uav/: CMakeLists.txt  package.xml  uri_uav_plugin.xml  uri_uav_resources_plugin.xml
uri_uav/configfiles/: att_thrust_iris.xml  example_iris.xml  takeoff_land_test.xml  test_takeoff_circling_land.xml  test_takeoff_goto_land.xml  test_takeoff_hover_land.xml
uri_uav/include/uri_uav/: iris_interface.hpp
uri_uav/include/uri_uav/behavior_controllers/: attitudethrusthover.hpp  bcontrollerexample.hpp  joystick.hpp  takeoffgotolandtest.hpp  takeofflandtest.hpp
uri_uav/include/uri_uav/resources/: iris_interface.hpp
uri_uav/include/uri_uav/tasks/: attitudethrustcontroller.hpp  bcontrollerexample.hpp  goto.hpp  hover.hpp  land.hpp  localization.hpp  monitor.hpp  takeoff.hpp  trajectory_controller.hpp  yawratecontroller.hpp
uri_uav/launch/: apm2.launch  att_th_controller_with_gz.launch  example.launch  example_with_gz.launch  node.launch  real_iris_connection.launch  takeoff_goto_land_test.launch  takeoff_land_test_with_gz.launch  takeoff_land_test_with_iris.launch  takeoff_land_test_with_iris_all.launch  takeoff_land_test_with_iris_mavros.launch
uri_uav/scripts/: test_help.py
uri_uav/src/: iris_interface.cpp  iris_interface_node.cpp
uri_uav/src/behavior_controllers/: attitudethrusthover.cpp  bcontrollerexample.cpp  joystick.cpp  takeoffgotolandtest.cpp  takeofflandtest.cpp
uri_uav/src/resources/: iris_interface.cpp
uri_uav/src/tasks/: attitudethrustcontroller.cpp  bcontrollerexample.cpp  goto.cpp  hover.cpp  land.cpp  localization.cpp  monitor.cpp  takeoff.cpp  trajectory_controller.cpp  yawratecontroller.cpp
(+22 files in other folders)
