<?xml version="1.0"?>
<package>
  <name>uri_gazebo</name>
  <version>0.0.1</version>
  <description>Package to start gazebo worlds and spawn robots for all TeleKyb experiments</description>
  
  <maintainer email="pstegagno@uri.edu">Paolo Stegagno</maintainer>

  <author>Paolo Stegagno</author>

  <license>Other</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>uri_base</build_depend>
  <build_depend>uri_core</build_depend>
<!--   <build_depend>telekyb_msgs</build_depend> -->
<!--   <build_depend>telekyb_srvs</build_depend> -->

  <run_depend>geometry_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
<!--   <run_depend>telekyb_msgs</run_depend> -->
<!--   <run_depend>telekyb_srvs</run_depend> -->
  <run_depend>gazebo_ros</run_depend>
  <run_depend>uri_base</run_depend>
  <run_depend>uri_core</run_depend>

  <export>
		<uri_core plugin="${prefix}/uri_gazebo_plugins.xml" />
    <gazebo_ros plugin_path="${prefix}/lib"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
